...
            onTap: () {
              if (onTap != null) {
                onTap(0);
              }
            },
            child: Container(
              key: Key("menuHome"),
              width: 32,
              height: 32,
              decoration: BoxDecoration(
                  image: DecorationImage(
                      image: AssetImage(
                        'assets/ic_home' +
...
            onTap: () {
              if (onTap != null) {
                onTap(1);
              }
            },
            child: Container(
              key: Key("menuOrder"),
              width: 32,
              height: 32,
              margin: EdgeInsets.symmetric(horizontal: 83),
              decoration: BoxDecoration(
                  image: DecorationImage(
                      image: AssetImage(
...
